2025-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (main): Initialize `want_unsafe_mode`
	to `false`, not `true`.  When flipping the semantics of this
	variable name in commit 3a1b01474d (to make it easier to
	implement "locking" `-S` option behavior), I neglected to flip
	its default value.

	Fixes <https://savannah.gnu.org/bugs/?67815>.  Thanks to Dave
	Kemper for the report and root-cause analysis.  Problem
	introduced by me in commit 3a1b01474d, 7 October.

2025-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	[groff]: Regression-test Savannah #67815.

	* src/roff/groff/tests/safer-mode-works.sh: Do it.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (interpolate_rg): Rename this...
	(interpolate_positional_parameter): ...to this.
	(get_copy, token::next): Update call sites.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (get_color_element): Rename this...
	(read_color_channel_value): ...to this.
	(read_rgb, read_cmy, read_cmyk, read_gray): Update call sites.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (get_char_for_escape_parameter):
	Rename this...
	(read_char_in_escape_sequence_parameter): ...to this.
	(read_long_escape_parameters, read_escape_parameter)
	(read_increment_and_escape_parameter): Update call sites.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (get_line_arg): Rename this...
	(read_line_rule_expression): ...to this.  Update forward
	declaration.
	(token:next): Update call site.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::is_usable_as_delimiter):
	Explicitly clear stack-allocated buffer before otherwise writing
	to it, for paranoia's sake.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>
