@@ -1,5 +1,10 @@
 2025-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/groff/tests/safer-mode-works.sh: Unit-test "locking"
+	of safer mode after `-S` option is specified.
+
+2025-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/roff/groff/groff.cpp (main): Initialize `want_unsafe_mode`
 	to `false`, not `true`.  When flipping the semantics of this
 	variable name in commit 3a1b01474d (to make it easier to
